# FEUP-L.EIC

./: .gitignore  README.md
BasesDeDados/Projeto Final/: ProjetoFinal.drawio
BasesDeDados/TP1/: Ex1.drawio  Ex2.drawio
MatematicaDiscreta/TP1/: Ex10.xlsx  Ex11.prf  Ex12.prf  Ex13-a.prf  Ex13-b.prf  Ex13-c.prf  Ex13-d.prf  Ex4.xlsx  Ex5.xlsx  Ex6.xlsx  Ex7.xlsx  Ex8.xlsx  Ex9.xlsx  Sentences 1.2.sen  World 1.14.wld  World 1.3.wld  World 1.5.wld  World 1.6.wld
MatematicaDiscreta/TP2/: Ex10-a.prf  Ex12-a.prf  Ex12-b.prf  Ex4.xlsx  Ex6.prf  Ex7.prf  Sentences 3-21.sen  Sentences 3-9.sen  Sentences 4-31.sen  Table 4-7.tt  World 3-13.wld  World 3-16.wld  World 3-6.wld  World 4-39.wld
MatematicaDiscreta/TP2&TP3/: Ex10-b.prf  Ex11.prf  Ex9.prf  Ex9.xlsx  Sentences 3-6.sen  Sentences 4-39.sen  Sentences 4-40.sen  Table 4-2.tt  Table 4-4.tt  Table 4-5.tt  Table 4-6.tt  World 3-9.wld
MatematicaDiscreta/TP4/: Ex2.xlsx  Ex4.xlsx  Ex6-1.prf  Ex6-2.prf  Ex6-3.prf  Ex6-4.prf  Ex6-5.prf  Sentences 7-15.sen  Table 7-3.tt  World 7-16.wld  World 8-2-1.wld
MatematicaDiscreta/TP6/: Ex1.prf  Ex2.prf  Ex3.wld
Programacao/TP1/: Ex1-2.c  Ex1.c  Ex2.c  Ex3-2.c  Ex3.c  Ex4.c  Ex5-2.c  Ex5.c  Ex6.c  Ex7-2.c  Ex7.c  a.out  hello
Programacao/TP2/: Ex1-1.c  Ex1-2(2).c  Ex1-2.c  Ex2-1.c  Ex2-2.c  Ex3.c  Ex4-1.c  Ex4-2.c  Ex5.c  Ex6-1.c  Ex6-2.c  (+1 more)
Programacao/TP4/prog_p4/: CMakeLists.txt
Programacao/TP4/prog_p4/src/: funcs.c  funcs.h  stack.c  test_days_in_month.cpp  test_exp_taylor.cpp  test_hexstr_convert.cpp
Programacao/TP5/: CMakeLists.txt  hello.cpp  median.cpp  minMaxSum.cpp
(+51 files in other folders)
